# jazzy_ws

install/minimum_act_client/share/minimum_act_client/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minimum_act_client/share/minimum_act_client/cmake/: minimum_act_clientConfig.cmake
install/minimum_service_client/share/minimum_service_client/: package.bash  package.zsh
log/: latest_build
minimum_act_client/: CMakeLists.txt  package.xml
minimum_cpp/: CMakeLists.txt  Readme.md  package.xml
minimum_cpp/include/minimum_cpp/: minimum_pub_main.hpp  minimum_sub_main.hpp
minimum_cpp/src/: minimum_pub_main.cpp  minimum_pub_main_lib.cpp  minimum_sub_main.cpp  minimum_sub_main_lib.cpp
minimum_launch/: CMakeLists.txt  package.xml
minimum_msg/: CMakeLists.txt  Readme.md  package.xml
minimum_param/: CMakeLists.txt  Readme.md  package.xml
minimum_param/config/: test_config_file.yaml
minimum_param/launch/: minimum_param_launch.py
minimum_param/src/: minimum_param.cpp
minimum_plugins/: CMakeLists.txt  package.xml
minimum_plugins/install/: local_setup.sh  setup.sh
minimum_plugins/install/polygon_base/share/polygon_base/: local_setup.sh  package.sh
minimum_plugins/install/polygon_plugins/share/polygon_plugins/: local_setup.dsv  local_setup.sh  package.sh  package.xml
minimum_plugins/install/use_plugins/lib/use_plugins/: area_node
minimum_plugins/install/use_plugins/share/use_plugins/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
minimum_plugins/install/use_plugins/share/use_plugins/cmake/: use_pluginsConfig.cmake
minimum_plugins/log/: latest_build
minimum_plugins/src/: Readme.md
minimum_plugins/src/polygon_base/: CMakeLists.txt  package.xml
minimum_plugins/src/polygon_plugins/: CMakeLists.txt
minimum_plugins/src/use_plugins/: CMakeLists.txt
minimum_plugins/src/use_plugins/src/: area_node.cpp
minimum_py/: CMakeLists.txt  package.xml
minimum_service_client/: CMakeLists.txt  Readme.md  package.xml
minimum_service_client/src/: adding_to_node_client.cpp  minimum_client.cpp  minimum_service.cpp
minimum_srv/: CMakeLists.txt  package.xml
